--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -4,40 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infanteria de Marina</title>
+    <title>Armada Argentina</title>
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
-<body>
-    <h1> Infantería de Marina</h1> <br>
-    <p>La Infantería de Marina Argentina es la fuerza de infantería de la Armada Argentina encargada de llevar a cabo
-        operaciones anfibias y terrestres. Su objetivo principal es brindar apoyo a las operaciones navales y contribuir a
-        la seguridad y defensa del país.</p> <br>
-    <a href="https://www.argentina.gob.ar/armada/infanteria-de-marina" target="_blank">Infanteria de Marina</a> <br><br>
-        <img src="./imagenes/im.jpg" alt="Infanteria de Marina Argentina">
-    <h2>Organización</h2>
-    <ol>
-        <li>· Fuerza de Infantería de Marina de la Flota de Mar "TN Cándido de Lasala" </li>
-        <li>· Batallón de Infantería de Marina Nº3 "Almirante Eleazar Videla"</li>
-        <li>· Base Naval de Infanteria de Marina Baterías</li>
-        <li>· Fuerza de Interia de Marina Austral</li>
-        <li>· Comando de Evaluación e Instrucción de la I.M</li>
-        <li>· Agrupación Servicios de Cuartel</li>
-    </ol>
-    <h2>Unidades</h2>
-    <ul>
-        <li>· Fuerza de Infantería de Marina de la Flota de Mar "TN Cándido de Lasala" </li>
-        <li>· Batallón de Infantería de Marina Nº3 "Almirante Eleazar Videla"</li>
-        <li>· Base Naval de Infanteria de Marina Baterías</li>
-        <li>· Fuerza de Infanteria de Marina Austral</li>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/OcX-0nxYZic" title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+  <header class=" ">
+    <h1> Armada Argentina</h1>
+  </header>
+  <div >
+   <nav class=" ">
+     <a class="" href="https://www.argentina.gob.ar/armada/superficie/unidades" target="_blank"> Unidaes de superficie</a>
 
- <header></header>
- <nav></nav>
- <section></section>
- <aside></aside>
+     <a class=" " href="https://www.argentina.gob.ar/armada/fuerza-de-submarinos" target="_blank">Fuerza de Submarino </a>
+
+     <a href="https://www.argentina.gob.ar/armada/infanteria-de-marina" target="_blank"> infanteria de Marina</a>
+
+     <a href="https://www.argentina.gob.ar/armada/aviacion-naval" target="_blank" > Aviación naval</a>
+   </nav>
+  </div>
+  <section class=" ">
+    <body>
+      <p class="a">La Armada de la República Argentina (ARA) es la rama naval de las fuerzas armadas argentinas, siendo uno de los brazos ejecutores del Sistema de Defensa Nacional - junto al Ejército y la Fuerza Aérea -, cuya misión principal es rechazar agresiones militares externas.</p> <br>
+
+      <h2>Organización</h2>
+        <ol>
+          <li>· Fuerza de Infantería de Marina de la Flota de Mar "TN Cándido de Lasala" </li>
+          <li>· Batallón de Infantería de Marina Nº3 "Almirante Eleazar Videla"</li>
+          <li>· Base Naval de Infanteria de Marina Baterías</li>
+          <li>· Fuerza de Interia de Marina Austral</li>
+          <li>· Comando de Evaluación e Instrucción de la I.M</li>
+          <li>· Agrupación Servicios de Cuartel</li>
+        </ol>
+      <h2>Unidades</h2>
+        <ul>
+          <li>· Fuerza de Infantería de Marina de la Flota de Mar "TN Cándido de Lasala" </li>
+          <li>· Batallón de Infantería de Marina Nº3 "Almirante Eleazar Videla"</li>
+          <li>· Base Naval de Infanteria de Marina Baterías</li>
+          <li>· Fuerza de Infanteria de Marina Austral</li>
+        </ul>
+        <div class="iframe">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OcX-0nxYZic"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+ </section>
+ 
+ <aside class=" ">
+
+ </aside>
  <footer> By Matías Lucentini -  2023</footer>
-</body>
+
 </html> 
